# github-issue-classifier

./: .dockerignore  .env.example  .gitignore  BUILD_PLAN_2.md  Dockerfile  LICENSE  PRIVACY.md  PROGRESS.md  README.md  SUPPORT.md  config.yaml  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: BENCHMARKS.md  DEPLOYMENT.md  PRD.md  openapi.json
docs/assets/: listing.md
ghic/: assign.py  backtest.py  category.py  cli.py  collect.py  config.py  demo.py  dupdetect.py  effort.py  evaluate.py  features.py  label.py  retrain.py  train.py  utils.py
ghic/service/: __init__.py  app.py  drafting.py  github_app.py  inference.py  settings.py  tracking.py
models/: ASSIGNMENT_CARD.md  DUPLICATE_CARD.md  EFFORT_CARD.md  MODEL_CARD.md  PRIORITY_CARD.md  REGISTRY.md  SEVERITY_CARD.md
notebook/: 01_data_collection.ipynb  02_preprocessing_and_features.ipynb  03_modeling_and_evaluation.ipynb
reports/: assign.json  backtest.json  backtest_champion.json  champion.json  dupdetect.json  effort.json  loadtest.json  loadtest_c1.json  metrics.json  webhook_latency_allheads.json
reports/runs/2026-07-13T19-41-30Z/: CATEGORY_CARD.md  category.json
scripts/: loadtest.py
tests/: test_assign.py  test_cli.py  test_collect_post.py  test_collect_releases.py  test_features.py  test_label.py  test_retrain.py  test_service.py
