[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghic"
version = "1.0.0"
description = "GitHub Issue Triage Bot — predicts whether a newly opened issue will resolve as an actionable bug, and triages it via a GitHub App webhook."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Faisal Hakimi" },
]
requires-python = ">=3.11"
keywords = ["github", "issue-triage", "machine-learning", "github-app", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "joblib>=1.3",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.8"]
embeddings = ["sentence-transformers>=3.0"]
llm = ["anthropic>=0.60"]
service = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "PyJWT>=2.8",
    "cryptography>=42",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
    "matplotlib>=3.8",
]

[project.urls]
Repository = "https://github.com/Faisalhakimi22/github-issue-classifier"

[project.scripts]
ghic-collect = "ghic.collect:main"
ghic-label = "ghic.label:main"
ghic-train = "ghic.train:main"
ghic-demo = "ghic.demo:main"
ghic-backtest = "ghic.backtest:main"
ghic-serve = "ghic.service.app:main"

[tool.setuptools.packages.find]
include = ["ghic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E741: single-letter loop vars in comprehensions are used deliberately.
ignore = ["E741"]
